# AnomalyAlertsIoT

./: CMakeLists.txt  Dockerfile  docker-compose.yml  readme.md  zookeer_kafka.sh
cmake/: FindRdKafka.cmake  Findcppkafka.cmake
config/prometheus/: prometheus.yml
include/: KafkaConsumer.hpp  KafkaProducer.hpp  SensorSimulator.hpp
src/: main.cpp  main_consumer.cpp
src/consumer/: KafkaConsumer.cpp
src/simulator/: KafkaProducer.cpp  SensorSimulator.cpp
